--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,12 @@ jobs:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore
+      
       - uses: actions/upload-artifact@v3
-        # if: always()
         with:
           name: cypress-videos
           path: cypress/videos
+          if-no-files-found: ignore 
           
         # Send notification to Teams on failure
       - name: Send Teams notification on failure
