--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,14 @@ jobs:
         # Send notification to Teams on failure
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
-        if: failure()
         with:
           webhook: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK }}
-          title: Cypress Test Failed!
+          title: Hello world!
+          message: <p>This is my <strong>awesome message!</strong></p>
           color: ff69b4
           buttons: |
-            Click here! https://programiz.pro/foo/
+            Click here! https://programiz.com/foo/
+            
           sections: |
             -
               facts:
