--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,21 @@ jobs:
           if-no-files-found: ignore 
           
         # Send notification to Teams on failure
-      - uses: simbo/msteams-message-card-action@latest
+      - name: 📣 Send teams notification
+        uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK }}
           title: Hello world!
           message: <p>This is my <strong>awesome message!</strong></p>
           color: ff69b4
           buttons: |
-            Click here! https://programiz.com/foo/
+            Click here! https://whatever.com/foo/
             
           sections: |
             -
+              activityTitle: David Claux
+              activitySubtitle: 9/13/2016, 3:34pm
+              activityImage: https://connectorsdemo.azurewebsites.net/images/MSC12_Oscar_002.jpg
               facts:
                 -
                   name: "Board:"
