--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,32 +27,11 @@ jobs:
           if-no-files-found: ignore 
           
         # Send notification to Teams on failure
-      - name: 📣 Send teams notification
-        uses: simbo/msteams-message-card-action@latest
-        with:
-          webhook: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK }}
-          title: Hello world!
-          message: <p>This is my <strong>awesome message!</strong></p>
-          color: ff69b4
-          buttons: |
-            Click here! https://whatever.com/foo/
-            
-          sections: |
-            -
-              activityTitle: David Claux
-              activitySubtitle: 9/13/2016, 3:34pm
-              activityImage: https://connectorsdemo.azurewebsites.net/images/MSC12_Oscar_002.jpg
-              facts:
-                -
-                  name: "Board:"
-                  value: Name of board
-                -
-                  name: "List:"
-                  value: Name of list
-                -
-                  name: "Assigned to:"
-                  value: (none)
-                -
-                  name: "Due date:"
-                  value: (none)
-              text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      - name: Send Teams notification on failure
+        if: failure()
+        env:
+          WEBHOOK_URL: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK }}
+        run: |
+          curl -H "Content-Type: application/json" -d '{
+            "text": "Action failed."
+          }' $WEBHOOK_URL
