--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: End-to-end tests
-on: push
+on: 
+  schedule:
+    - cron: '0 * * * *'
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
@@ -32,7 +34,7 @@ jobs:
         env:
           WEBHOOK_URL: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK }}
         run: |
-          timestamp=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          timestamp=$(TZ="Asia/Kathmandu" date +'%Y-%m-%d %H:%M:%S')
           uri="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           message="It appears that the Cypress test has encountered a failure."
 
